# computer_graphics

./: .gitignore
lab1/: CMakeLists.txt  README.md
lab1/src/: config.h  main.cpp
lab2/: CMakeLists.txt  README.md  lab2 sn.cpp
lab2/src/: glad.c  main.cpp
lab3/: main.cpp  my_program  readme.md
lab4/: lab4.cpp
lab5/: 2.cpp  main.cpp  readme.md
